fix: fix input background styling on dark mode for better consistency

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,7 +73,7 @@
   --destructive: oklch(0.652 0.234 26.6909);
   --destructive-foreground: oklch(1 0 0);
   --border: oklch(0.3867 0 0);
-  --input: oklch(0.3226 0.0127 252.9922);
+  --input: oklch(0.4268 0.0178 264.3679);
   --ring: oklch(0.4268 0.0178 264.3679);
   --chart-1: oklch(0.6174 0.2143 283.2909);
   --chart-2: oklch(0.7845 0.0952 195.3873);
